--- a/src/app/orders/orders.page.scss
+++ b/src/app/orders/orders.page.scss
@@ -57,7 +57,7 @@ ion-title{
 }
 
 ion-list{
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 ion-item {
